# inr-aliasing-limits

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
_audit_baseline/: results_manifest_baseline.txt
data/: co2.npz  fetch_real.py  speech.npz  speech_provenance.json  speech_rec0.npz  speech_rec1.npz  speech_rec2.npz  sunspots.npz  sunspots_smooth.npz
docs/: CHANGELOG-hardening.md  CHANGELOG-major-revision.md  audit-revision-report.md  claim-ledger.md  multitarget-and-arc.md  novelty-matrix.md
experiments/: _util.py  run_aliasability_rate.py  run_aliasguard.py  run_all.py  run_certified_design.py  run_diagnostic_roc.py  run_image2d.py  run_inr_design.py  run_mri.py  run_nonlinear.py  run_phase_transition.py  run_real_signal.py  run_silent_aliasing.py  run_synthetic_matrix.py
paper/: build.py  check_citations.py  check_consistency.py  citation_allowlist.json  gen_claim_ledger.py  macros_ag.tex  main.tex  refs.bib  supplement.tex  sync_macros.py  xref.tex
paper/common/: u1_matrix_bernstein.tex  u2_certified_design.tex  u3a_matching_rate.tex
results/: aliasguard.json  diagnostic_roc.json  image2d_aliasing.json  inr_design.json  mri_scoping.json  nonlinear.json  nonlinear_co2.json  phase_transition.json  real_co2.json  real_speech.json  real_sunspots.json  real_sunspots_smooth.json  silent_aliasing.json  synthetic_matrix.json
scripts/: _ssh.py  deploy.sh
src/inralias/: __init__.py  design.py  diagnostics.py  identifiability.py  inr.py  limits.py  mri.py  sampling.py  signals.py
submission/: AUTHOR-TODO.md  README.md  assemble.py  check_pdf.py  compliance-checklist.md  environment.txt  metadata.md  novelty-matrix.md  reproducibility.md  results-manifest.txt  submission-form-draft.md
tests/: test_design.py  test_diagnostics_inr.py  test_identifiability.py  test_sampling.py  test_theory_vs_sim.py
(+5 files in other folders)
