[project]
name = "inr-aliasing-limits"
version = "0.1.0"
description = "Fundamental aliasing limits of implicit neural representations: a learned sampling theorem with achievability and converse"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "soundfile>=0.12",
]

[project.optional-dependencies]
# torch is only needed for the trained nonlinear-INR experiments (SIREN / learnable
# frequencies). The theory core + its Monte-Carlo validation are pure numpy/scipy.
torch = ["torch>=2.2"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inralias"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
